<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Portal móvil</string>
    <string name="hello_world">Hello world!</string>
    <string name="filtros">filtros</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Buscar">Buscar</string>
    <string name="Direccion">Direccion</string>
    <string name="ubicacion_actual">Ubicación actual</string>
    <string name="listado">listado</string>
    <string name="guardar_busqueda">Guardar búsqueda</string>
    <string name="lista">Lista</string>
    <string name="Mapa">Mapa</string>
    <string name="guardar">guardar</string>
    <string name="info_local">Info. local</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">cancelar</string>
    <string name="Buscar_Direccion">Buscar dirección</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Venta">Venta</string>
    <string name="Arriendo">Arriendo</string>
    <string name="Arriendo_temporada">Arriendo temporada</string>
    <string name="Aplicar">Aplicar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Tipo_de_propiedad">Tipo de propiedad</string>
    <string name="Dormitorios">Dormitorios</string>
    <string name="Banos">Baños</string>
    <string name="str_pesos">CL$</string>
    <string name="str_UF">UF</string>
    <string name="precio_de_propiedad">Precio de propiedad</string>
    <string name="Superficie">Superficie</string>
    <string name="Desde">Desde</string>
    <string name="Cualquier">Cualquier</string>
    <string name="solo_amoblado">Sólo amoblado</string>
    <string name="limpiar_filtros">Limpiar filtros</string>

</resources>
