<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp"
                >

                <RadioGroup
                        android:id="@+id/groupTipoOperaciones"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        style="@style/AppTheme.TabWidget"
                        android:divider="@drawable/tab_control_divider"
                        android:background="@drawable/bordes_tabla"
                        >

                    <test.prueba.appmapa.app.Controles.TabControlButton
                            android:id="@+id/optVenta"
                            android:text="@string/Venta"
                            android:layout_weight=".3"
                            android:checked="true" />

                    <test.prueba.appmapa.app.Controles.TabControlButton
                            android:id="@+id/optArriendo"
                            android:text="@string/Arriendo"
                            android:layout_weight=".3"/>

                    <test.prueba.appmapa.app.Controles.TabControlButton
                            android:id="@+id/optArriendoTemp"
                            android:text="@string/Arriendo_temporada"
                            android:layout_weight=".4"/>
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Tipo_de_propiedad"
                        style="@style/textview_tituloFiltros"

                        />
                <LinearLayout
                        android:id="@+id/cmbTipoPropiedad"
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:background="@drawable/bordes_tabla"
                        android:padding="10dp"
                        android:layout_weight="1"

                        >
                        <TextView
                                android:id="@+id/txtTipoPropiedades"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/Tipo_de_propiedad"
                                android:textColor="@color/texto_gris_filtros"
                                android:layout_gravity="center"
                                android:layout_weight=".9"
                                android:singleLine="true"
                                android:textSize="14dp"
                                />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:layout_gravity="center"
                            android:paddingRight="5dp"
                            android:gravity="right"
                            android:background="@drawable/button_selector">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/chevron_right"

                                />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_de_propiedad"
                        style="@style/textview_tituloFiltros"

                        />
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="1"

                        >

                    <RadioGroup
                            android:id="@+id/groupTipoMoneda"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="@drawable/bordes_tabla"
                            android:weightSum="1"

                            >

                        <test.prueba.appmapa.app.Controles.TabControlButton
                                android:id="@+id/optPesos"
                                android:text="@string/str_pesos"
                                android:layout_weight=".5"
                                android:checked="true" />

                        <test.prueba.appmapa.app.Controles.TabControlButton
                                android:id="@+id/optUF"
                                android:text="@string/str_UF"
                                android:layout_weight=".5"/>

                    </RadioGroup>

                    <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:weightSum="1"
                            android:orientation="horizontal"
                            >

                        <LinearLayout
                                android:id="@+id/cmbSuperficieDesde"
                                android:layout_width="fill_parent"
                                android:layout_height="45dp"
                                android:orientation="horizontal"
                                android:layout_weight=".5"
                                android:gravity="right"
                                >
                            <Spinner
                                    android:id="@+id/spnrPrecioDesde"
                                    android:layout_width="110dp"
                                    android:layout_height="fill_parent"
                                    style="@style/AppTheme.SpinnerStyle"
                                    >
                            </Spinner>
                        </LinearLayout>
                        <LinearLayout
                                android:id="@+id/cmbSuperficieHasta"
                                android:layout_width="fill_parent"
                                android:layout_height="45dp"
                                android:orientation="vertical"
                                android:layout_weight=".5"

                                >
                            <Spinner
                                    android:id="@+id/spnrPrecioHasta"
                                    android:layout_width="110dp"
                                    android:layout_height="fill_parent"
                                    style="@style/AppTheme.SpinnerStyle"
                                    android:layout_gravity="right"
                                    >
                            </Spinner>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Superficie"
                style="@style/textview_tituloFiltros"


                />
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    >

                <LinearLayout
                        android:id="@+id/cmbSuperficieDesde"
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal"
                        android:layout_weight=".5"
                        >
                        <Spinner
                                android:id="@+id/spnrSuperficieDesde"
                                android:layout_width="150dp"
                                android:layout_height="fill_parent"
                                style="@style/AppTheme.SpinnerStyle"

                                >
                        </Spinner>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/cmbSuperficieHasta"
                        android:layout_marginTop="5dp"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:orientation="vertical"
                        android:layout_weight=".5"

                        >
                    <Spinner
                            android:id="@+id/spnrSuperficieHasta"
                            android:layout_width="150dp"
                            android:layout_height="fill_parent"
                            style="@style/AppTheme.SpinnerStyle"
                            android:layout_gravity="right"
                            >
                    </Spinner>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Dormitorios"
                        style="@style/textview_tituloFiltros"

                        />
                <RadioGroup
                        android:id="@+id/groupDormitorios"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:divider="@drawable/radio_group_divider"
                        android:showDividers="middle"
                        android:background="@drawable/bordes_tabla"

                        >

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optDorm0"
                            android:text="@string/Cualquier"
                            android:checked="true"
                            android:layout_weight=".4"/>

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optDorm1"
                            android:text="1"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optDorm2"
                            android:text="2"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optDorm3"
                            android:text="3"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optDorm4"
                            android:text="4"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optDorm5"
                            android:text="5+"
                            android:layout_weight=".12"
                            />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Banos"
                        style="@style/textview_tituloFiltros"

                        />
                <RadioGroup
                        android:id="@+id/groupBanos"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:divider="@drawable/radio_group_divider"
                        android:showDividers="middle"
                        android:background="@drawable/bordes_tabla"
                        >

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optBano0"
                            android:text="@string/Cualquier"
                            android:checked="true"
                            android:layout_weight=".4"/>

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optBano1"
                            android:text="1"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optBano2"
                            android:text="2"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optBano3"
                            android:text="3"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optBano4"
                            android:text="4"
                            android:layout_weight=".12"
                            />

                    <test.prueba.appmapa.app.Controles.SegmentedControlButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/optBano5"
                            android:text="5+"
                            android:layout_weight=".12"
                            />
                </RadioGroup>

            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                    >
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/solo_amoblado"
                        android:textSize="14dp"
                        android:textColor="@color/texto_gris_filtros"
                        />
            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="5dp"
                    >
                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:background="#C6E2EC"
                        >
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/limpiar_filtros"
                                android:textColor="#D0021B"
                                android:textSize="14dp"
                                />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
